// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StackChild renders null 1`] = `<DocumentFragment />`;

exports[`StackChild renders within a Stack with custom order 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-1 {
    max-width: 100%;
  }
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  color: #2e2e2e;
  border-radius: 0;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3 svg {
  fill: #2e2e2e;
}

.emotion-3:hover:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:active:not(:disabled) {
  border-width: 1px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-5 {
    max-width: 100%;
  }
}

.emotion-6 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-7 {
    max-width: 100%;
  }
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-13 {
    max-width: 100%;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                child 1
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-7"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                child 2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-13"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                child 3
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StackChild renders within a Stack, when Stack is a list 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  list-style-type: none;
  padding: 0;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-1 {
    max-width: 100%;
  }
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  color: #2e2e2e;
  border-radius: 0;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3 svg {
  fill: #2e2e2e;
}

.emotion-3:hover:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:active:not(:disabled) {
  border-width: 1px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-5 {
    max-width: 100%;
  }
}

.emotion-6 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-7 {
    max-width: 100%;
  }
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-13 {
    max-width: 100%;
  }
}

<ul
    class="emotion-0"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                child 1
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-7"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                child 2
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="emotion-13"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                child 3
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`StackChild renders within a Stack, with align self property 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-top: calc(-8px/2);
  margin-bottom: calc(-8px/2);
}

.emotion-1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-top: calc(8px/2);
  margin-bottom: calc(8px/2);
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-1 {
    max-width: 100%;
  }
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 8px 12px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  border-style: solid;
  border-color: #535353;
  border-width: 1px;
  color: #2e2e2e;
  border-radius: 0;
}

.emotion-3 svg {
  width: 16px;
  height: 16px;
}

.emotion-3 svg {
  fill: #2e2e2e;
}

.emotion-3:hover:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-3:active:not(:disabled) {
  border-width: 1px;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-5 {
    max-width: 100%;
  }
}

.emotion-6 {
  font-family: "Noto Sans",sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 500;
  letter-spacing: 0;
}

.emotion-6::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.32678571428571435em;
}

.emotion-6::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4267857142857143em;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                child 1
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                child 2
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="tag"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <span
                class="emotion-6"
              >
                child 3
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
